--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Création Site internet - Référencement Google 77 Seine-et-Marne</title>
     <meta name="description" content="Nous concevons des sites internet et des applications mobiles haut de gamme, pensés pour la performance, la visibilité et la croissance durable.">
-    <link rel="canonical" href="https://webprime-77.fr" />
+    <link rel="canonical" href="https://webprime-77.fr"/>
     <meta name="author" content="WebPrime 77">
     <meta name="robots" content="index, follow">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="apple-touch-icon" type="image/png" sizes="96x96" href="./logo/apple-icon-96x96.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./logo/android-icon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="./logo/android-icon-96x96.png">
-    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileColor" content="https://webprime-77.fr#ffffff">
     <meta name="msapplication-TileImage" content="./logo/ms-icon-32x32.png">
     <meta name="msapplication-TileImage" content="./logo/ms-icon-96x96.png">
     <link rel="stylesheet" href="style.css">
@@ -52,8 +52,8 @@
 <body>
     <header class="header">
         <div class="container">
-            <a href="#" class="logo">
-                <img src="logo-wp.png" alt="WebPrime 77 Logo">
+            <a href="https://webprime-77.fr" class="logo">
+                <img src="logo-wp.png" alt="WebPrime 77">
             </a>
             <button class="menu-toggle" aria-label="Menu" id="menuToggle">
                 <span></span>
@@ -62,8 +62,8 @@
             </button>
             <nav class="nav" id="nav">
                 <ul>
-                    <li><a href="#creation-site">Création Site</a></li>
-                    <li><a href="#application">Application Mobile</a></li>
+                    <li><a href="https://webprime-77.fr#creation-site">Création Site</a></li>
+                    <li><a href="https://webprime-77.fr#application">Application Mobile</a></li>
                 </ul>
             </nav>
         </div>
