Mise à jour format prix applications mobiles (412€, 620€, 829€ /mois x24)

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="5" y="2" width="14" height="20" rx="2" ry="2"/><line x1="12" y1="18" x2="12.01" y2="18"/></svg>
                     </div>
                     <h3 class="offer-title">App Essentielle</h3>
-                    <div class="offer-price">5 900€</div>
-                    <p class="offer-price-monthly">ou 492€/mois x12</p>
+                    <div class="offer-price">412 €</div>
+                    <p class="offer-price-monthly">par mois pendant 24 mois</p>
                     <p class="offer-description">Application de présentation</p>
                     <ul class="offer-features">
                         <li>5 à 10 écrans</li>
@@ -130,8 +130,8 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"/></svg>
                     </div>
                     <h3 class="offer-title">App Business</h3>
-                    <div class="offer-price">7 900€</div>
-                    <p class="offer-price-monthly">ou 659€/mois x12</p>
+                    <div class="offer-price">620 €</div>
+                    <p class="offer-price-monthly">par mois pendant 24 mois</p>
                     <p class="offer-description">Application interactive</p>
                     <p class="offer-includes">Inclut App Essentielle +</p>
                     <ul class="offer-features">
@@ -162,8 +162,8 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2L2 7l10 5 10-5-10-5z"/><path d="M2 17l10 5 10-5"/><path d="M2 12l10 5 10-5"/></svg>
                     </div>
                     <h3 class="offer-title">App Premium</h3>
-                    <div class="offer-price">10 900€</div>
-                    <p class="offer-price-monthly">ou 909€/mois x12</p>
+                    <div class="offer-price">829 €</div>
+                    <p class="offer-price-monthly">par mois pendant 24 mois</p>
                     <p class="offer-description">Application avancée</p>
                     <p class="offer-includes">Inclut App Business +</p>
                     <ul class="offer-features">
